--- a/docs/00_intro/20_data_life_cycle.mdx
+++ b/docs/00_intro/20_data_life_cycle.mdx
@@ -13,18 +13,18 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 In scientific work, the assurance of [good research practice](https://doi.org/10.5281/zenodo.3923602) is the highest imperative.
 
-To ensure compliance, professional handling of research data is of particular importance. To illustrate the handling of research data, there are various models such as the [domain model](https://subs.emis.de/LNI/Proceedings/Proceedings257/55.pdf) or the research data life cycle model. The research data life cycle model describes the lifespan of the data and beyond based on various phases from planning to publication or conscious deletion. For the research data life cycle, there are different approaches to the same model depending on the institution, the funder, etc. Different priorities can be placed on the data life cycle. The approach taken by [NFDI4Chem](http://nfdi4chem.de/) is shown in the figure on the right.
+To ensure compliance, professional handling of research data is of particular importance. To illustrate the handling of research data, there are various models such as the [domain model](https://subs.emis.de/LNI/Proceedings/Proceedings257/55.pdf) or the research data life cycle model. The research data life cycle model describes the lifespan of the data and beyond based on various phases from planning to publication or conscious deletion. For the research data life cycle, there are different approaches to the same model depending on the institution, the funder, etc. Different priorities can be placed on the data life cycle. The approach taken by [NFDI4Chem](https://www.nfdi4chem.de/) is shown in the figure on the right.
 <!-- One possible approach is shown in figure 1. -->
 
 
 ## Phase 1: Experiment Design
 
-In phase 1, you start with the **planning of your experiment design** as well as your **data management** ([formats](40_format_standards.mdx), [storage](../30_data/50_data_storage.mdx) …). During this planning phase, already **existing data** should be located and the **legal framework** for use should be checked.
-You should be aware of the various **requirements** of the research funder, your university, your institution, and your community and should write a **first draft** of your [data management plan (DMP)](../30_data/10_dmp.mdx). In this first draft, you should define the **responsibilities**.
+In phase 1, you start with the **planning of your experiment design** as well as your **data management** ([formats](/docs/format_standards), [storage](/docs/data_storage) …). During this planning phase, already **existing data** should be located and the **legal framework** for use should be checked.
+You should be aware of the various **requirements** of the research funder, your university, your institution, and your community and should write a **first draft** of your [data management plan (DMP)](/docs/dmp). In this first draft, you should define the **responsibilities**.
 
 ## Phase 2: Experiment/ Data Collection
 
-**New data** is created or collected in this phase, e.g. through chemical synthesis, simulations of molecules, or measurements carried out on samples. When conducting the respective experiment, make sure that you also create or record the **relevant [metadata](30_metadata.mdx)** that describes the data. The [documentation](../30_data/40_data_documentation.mdx) of the created data with all further information and metadata should be recorded in an [(electronic) laboratory notebook](10_eln.mdx).
+**New data** is created or collected in this phase, e.g. through chemical synthesis, simulations of molecules, or measurements carried out on samples. When conducting the respective experiment, make sure that you also create or record the **relevant [metadata](/docs/metadata)** that describes the data. The [documentation](/docs/data_documentation) of the created data with all further information and metadata should be recorded in an [(electronic) laboratory notebook](/docs/eln).
 
 If you use existing data or samples, **clarify the rights of use**. In this case, provenance metadata may provide you with information. In addition, a link should be created between the existing data and the newly generated data. This is relevant information and helps you in the [reuse phase](#phase-6-re-use).
 
@@ -44,8 +44,8 @@ Before sharing data, you should check whether the data is subject to **copyright
 
 During this exchange and the associated reflections on the data, you should think about archiving and using the data in scientific publications. If you are not aware of any **criteria for archiving** and no criteria are specified in your working group or institute, decision-making guides such as the [“5 steps to decide what data to keep”](https://www.dcc.ac.uk/guidance/how-guides/five-steps-decide-what-data-keep)  outlined by the DCC can help. Based on the established criteria, it is determined which of the collected raw data should be archived and which should be deliberately deleted.
 
-In addition to the criteria, the migration of the data into **suitable [formats](40_format_standards.mdx) and onto suitable media** is important for archiving the data. In this step, the data should again be enriched with metadata so that it can be understood in the future without further knowledge about the data.
-In addition to archiving, the [publication](../30_data/60_data_publication.mdx) of the data plays a special role. Many research funders expect the data to be published if there are no special reasons not to do so, such as a non-disclosure agreement or the inclusion of personal data. A **chemistry-specific or chemistry-related [repository](20_repositories.mdx)** such as the [Chemotion Repository](https://www.chemotion-repository.net/), [NOMAD](https://nomad-lab.eu/services/repo-arch), or [MassBank](https://massbank.eu/MassBank/)  is recommended for the publication of data. An overview of repositories can be found, for example, at [re3data.org](https://www.re3data.org/) or [fairsharing.org](https://fairsharing.org/). re3data.org allows you to filter repositories according to certain criteria such as the assignment of a persistent identifier or access.
+In addition to the criteria, the migration of the data into **suitable [formats](/docs/format_standards) and onto suitable media** is important for archiving the data. In this step, the data should again be enriched with metadata so that it can be understood in the future without further knowledge about the data.
+In addition to archiving, the [publication](/docs/data_publication) of the data plays a special role. Many research funders expect the data to be published if there are no special reasons not to do so, such as a non-disclosure agreement or the inclusion of personal data. A **chemistry-specific or chemistry-related [repository](/docs/repositories)** such as the [Chemotion Repository](https://www.chemotion-repository.net/), [NOMAD](https://nomad-lab.eu/services/repo-arch), or [MassBank](https://massbank.eu/MassBank/)  is recommended for the publication of data. An overview of repositories can be found, for example, at [re3data.org](https://www.re3data.org/) or [fairsharing.org](https://fairsharing.org/). re3data.org allows you to filter repositories according to certain criteria such as the assignment of a persistent identifier or access.
 Data publication often takes place at certain milestones, for example, in combination with a text publication or at the end of a project. The **final version of the data management plan** is also required at the end of a project.
 
 ## Phase 6: Re-use
