--- a/docs/10_domains/60_pharmaceutical_chemistry.mdx
+++ b/docs/10_domains/60_pharmaceutical_chemistry.mdx
@@ -29,7 +29,7 @@ Starting from promising hit compounds, optimisation cycles are performed to impr
 
 ## Documentation of experiments
 
-[Documentation](../30_data/40_data_documentation.mdx) of research data and [metadata](../40_topics/30_metadata.mdx) is carried out, preferably digitally, using a suitable [ELN](/docs/eln) and/or a manual laboratory notebook in paper form.
+[Documentation](/docs/data_documentation) of research data and [metadata](/docs/metadata) is carried out, preferably digitally, using a suitable [ELN](/docs/eln) and/or a manual laboratory notebook in paper form.
 
 Using an ELN:
 
