--- a/docs/40_smartlab/10_eln.mdx
+++ b/docs/40_smartlab/10_eln.mdx
@@ -11,9 +11,9 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 Information technology continuously develops at a fast pace. For example, the smartphones we all carry on a daily basis in our pockets are much faster than a supercomputer from the 80s which you could barely fit in an average bedroom. Unfortunately, this accelerated advancement of information technology has not yet fully reached our chemical laboratories. The paper laboratory notebook is just as popular and widespread as it was 100 years ago, with the very essence of how chemical research data is documented - literally with pen and paper - having only made little progress over the last century. 
 
-Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean tablets & touch screens in every corner of your laboratory. The term Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](01_fair.mdx). ELNs help to assign rich [metadata](30_metadata.mdx) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](../30_data/50_data_storage.mdx).
+Transferring the advancement of the information technology into the lab (smartlab) does not necessarily mean tablets & touch screens in every corner of your laboratory. The term Smartlab is more about the interconnectivity of the entire workflow and handling research data according to the [FAIR principles](/docs/fair). ELNs help to assign rich [metadata](/docs/metadata) to experiments and make the collected data traceable as well as reusable. With the possibility to transfer data from measurement devices directly into the ELN, the ELN is the central storage with all data in one place. From the ELN, data can be easily published into repositories and transferred to suitable long-term [archiving](/docs/data_storage).
 
-One of the most important things, that distinguishes an ELN from a white blank paper is the possibility to document [metadata](30_metadata.mdx) in a structured and ideally in a human as well as machine-readable way. See the following overview for more information on the differences between blank sheets, ELNs and laboratory information management systems (LIMS).
+One of the most important things, that distinguishes an ELN from a white blank paper is the possibility to document [metadata](/docs/metadata) in a structured and ideally in a human as well as machine-readable way. See the following overview for more information on the differences between blank sheets, ELNs and laboratory information management systems (LIMS).
 
 <div className='container'>
     <div className='row'>
@@ -61,7 +61,7 @@ One of the most important things, that distinguishes an ELN from a white blank p
 
 ## Advantages of an ELN
 
-ELNs help to link experimental descriptions directly to the collected data so that all information can be found in one place. Furthermore, data loss is avoided by secure data storage and backups. Storing all the data in one central place helps also with knowledge management because the data is easily findable and accessible, even for new members in a research project. The biggest advantage of an ELN is that [metadata](30_metadata.mdx) is stored in a structured and [standardised](40_format_standards.mdx) way. This also helps with publishing research results and transferring research data to a repository.
+ELNs help to link experimental descriptions directly to the collected data so that all information can be found in one place. Furthermore, data loss is avoided by secure data storage and backups. Storing all the data in one central place helps also with knowledge management because the data is easily findable and accessible, even for new members in a research project. The biggest advantage of an ELN is that [metadata](/docs/metadata) is stored in a structured and [standardised](/docs/format_standards) way. This also helps with publishing research results and transferring research data to a repository.
 
 
 <div className='container'>
@@ -113,7 +113,7 @@ ELNs help to link experimental descriptions directly to the collected data so th
 
 ## The right ELN
 
-To date, there is not one ELN, that fits the requirements for all chemical disciplines. Furthermore, only a few ELNs meet the basic requirements for chemical sciences. This is most likely due to the challenges arising from drawing and processing chemical structures, a crucial and central step in being able to correlate research data to the corresponding chemical reaction or structure. The organisation of work with ELNs that support chemistry-specific functions can offer several benefits, such as the availability of [chemical structure identifiers](70_machine-readable_chemical_structures.mdx) and [standardised formats](40_format_standards.mdx) as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. Some Open Source examples for systems in chemistry that offer the necessary support for chemical structures include [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/), and [Chemotion ELN](https://eln.chemotion.net/home).
+To date, there is not one ELN, that fits the requirements for all chemical disciplines. Furthermore, only a few ELNs meet the basic requirements for chemical sciences. This is most likely due to the challenges arising from drawing and processing chemical structures, a crucial and central step in being able to correlate research data to the corresponding chemical reaction or structure. The organisation of work with ELNs that support chemistry-specific functions can offer several benefits, such as the availability of [chemical structure identifiers](/docs/machine-readable_chemical_structures) and [standardised formats](/docs/format_standards) as well as the integration of manifold tools and workflows that facilitate scientific work. The direct integration of tools enables a direct support of the scientist without the need to search for additional services and software, thus bringing new developments and information directly to the scientists’ awareness. Some Open Source examples for systems in chemistry that offer the necessary support for chemical structures include [Indigo-ELN](https://lifescience.opensource.epam.com/indigo/eln/index.html), [LabTrove](http://labtrove.org/), [OpenEnventory](http://www.open-enventory.de/), and [Chemotion ELN](https://eln.chemotion.net/home).
 
 Therefore, choosing the right ELN is crucial for a successful implementation of an ELN in a laboratory. Three steps should be taken to establish an ELN: 1) Needs assessment, 2) Testing and 3) Introducing the chosen ELN.
 
@@ -168,7 +168,7 @@ Chemotion is the ELN reference instance in NFDI4Chem. The Chemotion ELN is devel
 
 The Chemotion ELN was designed for chemists and adapted to the special requirements of chemical laboratory work and documentation. It therefore serves as a digitalization instrument for work in chemistry, developed to overcome the current limitations of the existing systems. To reach this goal, the development, improvement, and extension of the ELN is a community effort. The ELN is also used in other disciplines beyond chemistry as it offers a broad generic functionality to meet the needs of scientists working in interdisciplinary environments. These generic functions are still being extended and adapted.
 
-Chemotion ELN offers a specific function that facilitates the [publication of research data](../30_data/60_data_publication.mdx): it supports the transfer of data from a user's ELN account to a research data repository. This function reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific text publications. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
+Chemotion ELN offers a specific function that facilitates the [publication of research data](/docs/data_publication): it supports the transfer of data from a user's ELN account to a research data repository. This function reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific text publications. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
 
 A short introduction to the Chemotion ELN as well as the connection to the Chemotion repository is demonstrated in this video:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/tZHaP6DW-Dw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
