--- a/docs/50_data_publication/30_best_practice.mdx
+++ b/docs/50_data_publication/30_best_practice.mdx
@@ -7,7 +7,7 @@ slug: "/best_practice"
 
 ## Introduction
 
-All scientists generate scientific data independently of whether they are working practically or theoretically, e.g., reaction protocols, analytical data, or calculated data. These data can be [domain-specific](/docs/guide), however, they are always accompanied by [metadata](/docs/metadata). Furthermore, depending on the [career level](/docs/guide), there might be different requirements and responsibilities.
+All scientists generate scientific data independently of whether they are working practically or theoretically, e.g., reaction protocols, analytical data, or calculated data. These data can be [domain-specific](/docs/domain_guide), however, they are always accompanied by [metadata](/docs/metadata). Furthermore, depending on the [career level](/docs/guide), there might be different requirements and responsibilities.
 
 In fact, all scientists are responsible for the [documentation](/docs/data_documentation) and [organisation](/docs/data_organisation) of their data in order to ensure that the data can be archived in a [FAIR](/docs/fair) (**F**indable, **A**ccessible, **I**nteroperable, **R**e-usable) way. Most research and funding institutions provide internal guidelines for research data management (RDM), such as the [DFG](https://www.dfg.de/download/pdf/foerderung/grundlagen_dfg_foerderung/forschungsdaten/forschungsdaten_checkliste_de.pdf). In addition, many funding institutions encourage or even enforce the [publication](/docs/data_publication) and [storage](/docs/data_storage) of FAIR data. For good data handling practices, the use of [data management plans](/docs/dmp) is recommended. In general, the handling of research data should follow the [data life cycle](/docs/data_life_cycle).
 
