--- a/docs/00_intro/10_fair.mdx
+++ b/docs/00_intro/10_fair.mdx
@@ -11,7 +11,7 @@ Image Attribution: SangyaPundir, [CC BY-SA 4.0](https://creativecommons.org/lice
 ## Introduction
 
 The [FAIR Data Principles](https://doi.org/10.1038/sdata.2016.18) were published after being defined at the [Lorentz Workshop](https://www.lorentzcenter.nl/) in 2014.
-These principles serve as guidelines to both those who publish data, e.g. researchers, as well as those who preserve data, e.g. [repository](20_repositories.mdx) or archive service providers. This is an important distinction, highlighting that a researcher’s data can only be as FAIR as the infrastructure and services available to them.
+These principles serve as guidelines to both those who publish data, e.g. researchers, as well as those who preserve data, e.g. [repository](/docs/repositories) or archive service providers. This is an important distinction, highlighting that a researcher’s data can only be as FAIR as the infrastructure and services available to them.
 
 Keeping in mind the long-term goal of making scientific data reusable to others by creating systematic order in the ever-growing mound of data arising from research, the FAIR Data Principles place a strong focus on machine-readable (meta)data. While humans must be able to find and understand the published datasets as well, computers will be tasked with sifting through large amounts of data and determining which datasets are relevant to the intended purpose and how they can be reused.
 
@@ -27,13 +27,13 @@ Researchers — and the computers working on their behalf — must be able to fi
 
 ### F1. (meta)data are assigned a globally unique and persistent identifier
 
-A globally unique and [persistent identifier (PID)](100_pid.mdx) helps both machines and humans find the data in the first place. These PIDs are essential for research as they guarantee the availability of the associated resource, in this case a dataset. The registry services that make these identifiers available work to maintain the link to the resource, thus avoiding dead links. This ensures the resource remains findable and may be referenced simply by the use of its PID.
+A globally unique and [persistent identifier (PID)](/docs/pid) helps both machines and humans find the data in the first place. These PIDs are essential for research as they guarantee the availability of the associated resource, in this case a dataset. The registry services that make these identifiers available work to maintain the link to the resource, thus avoiding dead links. This ensures the resource remains findable and may be referenced simply by the use of its PID.
 
 A common example of a citable PID is the Digital Object Identifier, or [DOI](https://doi.org/10.1000/182). As with many journals, scientific data repositories often assign a DOI automatically. The Registry of Research Data Repositories, [re3data](https://www.re3data.org/), indicates whether a given repository assigns an identifier, along with the PID type. For example, both the [The Cambridge Structural Database (CSD)](https://www.ccdc.cam.ac.uk/solutions/csd-system/components/csd/) and the [Chemotion Repository](https://www.chemotion-repository.net/) assign DOIs to each dataset deposited. Researchers must be aware of this option when searching for a suitable repository, while repositories should offer this service.
 
 ### F2. data are described with rich metadata (defined by R1 below)
 
-Data need to be sufficiently described in order to make them both findable and reusable. Hence, the specific focus here lies on making the (meta)data findable by using rich discovery [metadata](30_metadata.mdx) in a standardized format and allowing computers and humans to quickly understand the dataset’s contents. This is an essential component in the plurality of metadata described by [R1](#r1-metadata-are-richly-described-with-a-plurality-of-accurate-and-relevant-attributes) below. This information may include, but is not limited to:
+Data need to be sufficiently described in order to make them both findable and reusable. Hence, the specific focus here lies on making the (meta)data findable by using rich discovery [metadata](/docs/metadata) in a standardized format and allowing computers and humans to quickly understand the dataset’s contents. This is an essential component in the plurality of metadata described by [R1](#r1-metadata-are-richly-described-with-a-plurality-of-accurate-and-relevant-attributes) below. This information may include, but is not limited to:
 
 - the context on what the dataset is, how it was generated, and how it can be interpreted,
 - the data quality,
@@ -82,7 +82,7 @@ Data need to be integrated with and/or compared to other datasets, while compute
 
 ### I1. (meta)data use a formal, accessible, shared, and broadly applicable language for knowledge representation
 
-Machines need to be able to understand how to exchange and interpret information. Similar to humans, a uniform and standard language aids in this understanding. In chemistry, a great typical example of such an information exchange standard is the [crystallographic information (CIF)](https://doi.org/10.1107/97809553602060000107). This standard also adheres to the aspects described in [I2](#i2-metadata-use-vocabularies-that-follow-fair-principles) and [R1.3](#r13-metadata-meet-domain-relevant-community-standards) below. Simply put, [standard file formats](40_format_standards.mdx) for a given analytical method ensure the data and the associated metadata, which typically include measurement details, for example, follows a prescribed format. This ensures both humans and machines receive the information required to interpret the data.
+Machines need to be able to understand how to exchange and interpret information. Similar to humans, a uniform and standard language aids in this understanding. In chemistry, a great typical example of such an information exchange standard is the [crystallographic information (CIF)](https://doi.org/10.1107/97809553602060000107). This standard also adheres to the aspects described in [I2](#i2-metadata-use-vocabularies-that-follow-fair-principles) and [R1.3](#r13-metadata-meet-domain-relevant-community-standards) below. Simply put, [standard file formats](/docs/format_standards) for a given analytical method ensure the data and the associated metadata, which typically include measurement details, for example, follows a prescribed format. This ensures both humans and machines receive the information required to interpret the data.
 
 Especially when looking at metadata, effective and efficient machine readability greatly depends on being able to reduce ambiguity. Metadata provides context to datasets. However, machines need to be able to interpret this context. Therefore, the structured schemas chosen by the repositories should include universally applied [ontologies](https://terminology.nfdi4chem.de/ts/ontologies) and controlled vocabularies to define relationships and avoid ambiguity. For example, chemistry-specific repositories should be designed to include [ontologies](/docs/ontology) such as the [Chemical Methods Ontology (CHMO)](http://purl.obolibrary.org/obo/chmo.owl) or the [Chemical Information Ontology (cheminf)](http://semanticchemistry.github.io/semanticchemistry/ontology/cheminf.owl) to accurately describe the (meta)data provided. Such ontologies should be based on widely-applied data models, for instance, the
 [Resource Description Framework (RDF)](https://www.w3.org/RDF/).
@@ -115,7 +115,7 @@ Related to [F2](#f2-data-are-described-with-rich-metadata-defined-by-r1-below) a
 - Any limitations to the data
 - Software and versions used for acquisition and processing.
 
-An important piece of information for chemical data is a [machine-readable chemical structures](70_machine-readable_chemical_structures.mdx). This should be included within the dataset and/or metadata and aids computers in finding the correct data in their queries.
+An important piece of information for chemical data is a [machine-readable chemical structures](/docs/machine-readable_chemical_structures). This should be included within the dataset and/or metadata and aids computers in finding the correct data in their queries.
 
 Repositories should provide data publishers with the opportunity to include a plurality of information in their metadata. This includes giving a wide range of optional and free-fill fields for data publishers to complete.
 
@@ -129,10 +129,10 @@ In simple terms: metadata include any relevant history. If the dataset is relate
 
 #### R1.3. (meta)data meet domain-relevant community standards
 
-As research data management and, as such, [data publication](../30_data/60_data_publication.mdx) becomes more and more prevalent across research areas, [best practices](60_best_practice.mdx) in the individual communities will arise. This should encompass metadata templates for proper documentation of datasets, how the data should be [organized](../30_data/30_data_organisation.mdx), which vocabularies or [ontologies](50_ontology.mdx) to use, and [file formats](40_format_standards.mdx). NFDI4Chem is working to establish [metadata and data standards](https://www.nfdi4chem.de/index.php/task-areas/) for the various communities in chemistry.
+As research data management and, as such, [data publication](/docs/data_publication) becomes more and more prevalent across research areas, [best practices](/docs/best_practice) in the individual communities will arise. This should encompass metadata templates for proper documentation of datasets, how the data should be [organized](/docs/data_organisation), which vocabularies or [ontologies](/docs/ontology) to use, and [file formats](/docs/format_standards). NFDI4Chem is working to establish [metadata and data standards](https://www.nfdi4chem.de/index.php/task-areas/) for the various communities in chemistry.
 
-Where available, community standards and best practices should be followed when those publishing prepare their datasets and relevant metadata for publication. [Repositories](20_repositories.mdx), especially domain-specific service providers, should adhere to the standards set forth by the community by requiring files and metadata to follow format specifications.
-As noted in [I1](#i1-metadata-use-a-formal-accessible-shared-and-broadly-applicable-language-for-knowledge-representation) above, the CIF format represents a community-specific standard associated with the chemical community. Furthermore, [NMReDATA](https://doi.org/10.1002/mrc.4737) represents a possible [standard file format](40_format_standards.mdx) for publishing and archiving Nuclear Magnetic Resonance (NMR) data.
+Where available, community standards and best practices should be followed when those publishing prepare their datasets and relevant metadata for publication. [Repositories](/docs/repositories), especially domain-specific service providers, should adhere to the standards set forth by the community by requiring files and metadata to follow format specifications.
+As noted in [I1](#i1-metadata-use-a-formal-accessible-shared-and-broadly-applicable-language-for-knowledge-representation) above, the CIF format represents a community-specific standard associated with the chemical community. Furthermore, [NMReDATA](https://doi.org/10.1002/mrc.4737) represents a possible [standard file format](/docs/format_standards) for publishing and archiving Nuclear Magnetic Resonance (NMR) data.
 
 Where required, format converters should be linked in the dataset’s metadata.
 
