--- a/docs/60_topics/62_data_formats/10_format_standards.mdx
+++ b/docs/60_topics/62_data_formats/10_format_standards.mdx
@@ -5,13 +5,13 @@ slug: "/format_standards"
 
 # Data format standard
 
-Research data is the key to any science. As part of a [FAIR](01_fair.mdx) practice, these data should be accompanied by valuable [metadata](30_metadata.mdx) and have to be exchanged in standardised and open formats. In chemistry these data include experimental parameters and measurement results, chemical structures, properties of compounds and descriptions of reactions. Whenever research data are published, stored, shared or reused, chemists have to decide on a format suitable for the purpose and consider the long-term stages of the [data life cycle](110_data_life_cycle.mdx). [Repositories](20_repositories.mdx) and databases often accept specific formats to ensure comparability and completeness of data and metadata provided. If chemists are aware of data standards during data acquisition and research documentation, later conversions will be less challenging. [Electronic lab notebooks](10_eln.mdx) can support the scientist in the early stages of data management.
+Research data is the key to any science. As part of a [FAIR](/docs/fair) practice, these data should be accompanied by valuable [metadata](/docs/metadata) and have to be exchanged in standardised and open formats. In chemistry these data include experimental parameters and measurement results, chemical structures, properties of compounds and descriptions of reactions. Whenever research data are published, stored, shared or reused, chemists have to decide on a format suitable for the purpose and consider the long-term stages of the [data life cycle](/docs/data_life_cycle). [Repositories](/docs/repositories) and databases often accept specific formats to ensure comparability and completeness of data and metadata provided. If chemists are aware of data standards during data acquisition and research documentation, later conversions will be less challenging. [Electronic lab notebooks](/docs/eln) can support the scientist in the early stages of data management.
 
 ## Definitions
 
 A successful data format standard is defined by the data model and the data representation. A specification of a representation may contain the model implicitly.
 
-The **Data model** describes how data is organised, which information they contain, the data types (e.g. text, numbers, lists), the relationship between these components, and rules of component and data integrity. Conceptually, the model and its components can be organised in different ways, e.g. flat, multidimensional, as network or hierarchical. The meaning of the applied components has to be well described in an unambiguous way. [Ontologies](50_ontology.mdx) can be consulted to ensure a consistent usage of the components in the context of the model. As the data model is abstract, it is necessary to implement representations for it, such as a database or data file on a computer.
+The **Data model** describes how data is organised, which information they contain, the data types (e.g. text, numbers, lists), the relationship between these components, and rules of component and data integrity. Conceptually, the model and its components can be organised in different ways, e.g. flat, multidimensional, as network or hierarchical. The meaning of the applied components has to be well described in an unambiguous way. [Ontologies](/docs/ontology) can be consulted to ensure a consistent usage of the components in the context of the model. As the data model is abstract, it is necessary to implement representations for it, such as a database or data file on a computer.
 
 Digital files containing data are only one way to represent a data model. Other **representations** would be response data from API requests or results from a database query. 
 
@@ -129,9 +129,9 @@ There is no existing standard for XRF files, so most of the software tools provi
 
 ### Format standards for structural Data
 
-To describe chemical structures as a simple ASCII string there is the SMILES format, which is an open standard as OpenSMILES since 2007. For more information about SMILES and its variants read the [simplified molecular-input line-entry system  (SMILES)](40_smiles.mdx) article in this knowledge base.
+To describe chemical structures as a simple ASCII string there is the SMILES format, which is an open standard as OpenSMILES since 2007. For more information about SMILES and its variants read the [simplified molecular-input line-entry system  (SMILES)](/docs/smiles) article in this knowledge base.
 
-Another one line encoding of structures, mainly intended for searching information about compounds,  is the [International Chemical Identifier (InChi)](80_inchi.mdx), which has also an open specification and is described [separately](80_inchi.mdx).
+Another one line encoding of structures, mainly intended for searching information about compounds,  is the [International Chemical Identifier (InChi)](/docs/inchi), which has also an open specification and is described [separately](/docs/inchi).
 
 A simple Text format for chemical structures is the [XYZ format](http://openbabel.org/wiki/XYZ_(format)), which only contains the coordinates for the atoms of a molecule. As the format lacks a formal specification the implementations for XYZ may differ and result in incompatible files.
 
