--- a/docs/60_topics/63_data_description_annotation/10_metadata.mdx
+++ b/docs/60_topics/63_data_description_annotation/10_metadata.mdx
@@ -7,7 +7,7 @@ slug: "/metadata"
 
 ## Metadata and their schemas
 Metadata can be described as "data about data", meaning, it is data that describes data, like content of a dataset or file, or the context of this data.
-More specific examples could be the title, keywords, acquisition method with a certain analytical technique, and the list continues. Metadata should be supported by controlled vocabularies (ideally [ontologies](20_ontology.mdx)), and/or [data formats](40_format_standards.mdx).
+More specific examples could be the title, keywords, acquisition method with a certain analytical technique, and the list continues. Metadata should be supported by controlled vocabularies (ideally [ontologies](/docs/ontology)), and/or [data formats](/docs/format_standards).
 
 Metadata gets more specialized as the domain it describes does, where the hierarchy of domains can correspond to a hierarchical metadata structure, enabling layers of multiple standards from more generic metadata, where it is completely domain-independent, moving to more specific ones. 
 
@@ -36,18 +36,18 @@ Due to the increasing amount of data produced by omics, biology and related disc
 
 Although the explored part of the chemical space along with the chemical data produced is increasing rapidly, there are only a few attempts to define guidelines for minimum information in chemistry, e.g. [Metabolomics Standards Initiative (MSI)](https://dx.doi.org/10.1007%2Fs11306-007-0082-2) or [Collaboratory for the Multi-scale Chemical Sciences (CMCS)](https://www.researchgate.net/publication/228602526_Metadata_in_the_collaboratory_for_multi-scale_chemical_science). The NFDI4Chem will address this issue and is working on Minimum Information for Chemical Investigations (MIChI), which includes standards for methods such as mass spectrometry, nuclear magnetic resonance and other spectroscopic methods. International workshops are already being carried out in order to start the needed discussion about the MIChI.
 
-Software projects such as [electronic lab notebooks](10_eln.mdx) or [repositories](20_repositories.mdx) often define their own layer of specific minimum metadata for chemical experiments which are based on existing standards, e.g. for metabolomics, or defined by the [data formats](40_format_standards.mdx) they import.
+Software projects such as [electronic lab notebooks](/docs/eln) or [repositories](/docs/repositories) often define their own layer of specific minimum metadata for chemical experiments which are based on existing standards, e.g. for metabolomics, or defined by the [data formats](/docs/format_standards) they import.
 
-Existing [ontologies](20_ontology.mdx) are a good starting point to identify the information necessary to describe a method, results, samples, or other entities. Furthermore, controlled vocabularies and ontologies define what additional metadata is allowed in order to create rich metadata, in turn improving the data's FAIRness. Examples for formats with corresponding ontologies or a controlled vocabularies are [mzML](https://www.psidev.info/mzML), [CIF](https://www.iucr.org/resources/cif), [NeXus](https://www.nexusformat.org/),
+Existing [ontologies](/docs/ontology) are a good starting point to identify the information necessary to describe a method, results, samples, or other entities. Furthermore, controlled vocabularies and ontologies define what additional metadata is allowed in order to create rich metadata, in turn improving the data's FAIRness. Examples for formats with corresponding ontologies or a controlled vocabularies are [mzML](https://www.psidev.info/mzML), [CIF](https://www.iucr.org/resources/cif), [NeXus](https://www.nexusformat.org/),
 and the
 [Allotrope Data Format (ADF)](https://docs.allotrope.org/Allotrope%20Data%20Format.html).
 
 [The Chemical Analysis Metadata Platform (ChAMP)](https://champ.stuchalk.domains.unf.edu/) is a project, which focuses on defining a framework for chemical analysis methods.
 
 ## Metadata and the FAIR Principles
-The [FAIR Guiding Principles](https://doi.org/10.1038/sdata.2016.18) do not only apply to data but also the associated metadata. More information can be found in the [FAIR article](01_fair.mdx) or on [GoFair](https://www.go-fair.org/how-to-go-fair/).
+The [FAIR Guiding Principles](https://doi.org/10.1038/sdata.2016.18) do not only apply to data but also the associated metadata. More information can be found in the [FAIR article](/docs/fair) or on [GoFair](https://www.go-fair.org/how-to-go-fair/).
 
-Metadata, as well as the data itself, should be assigned unique [persistent identifiers (PID)](100_pid.mdx) to be referenced in publications and other datasets. By organizing these PIDs hierarchically, each parameter in the metadata can be referenced individually.
+Metadata, as well as the data itself, should be assigned unique [persistent identifiers (PID)](/docs/pid) to be referenced in publications and other datasets. By organizing these PIDs hierarchically, each parameter in the metadata can be referenced individually.
 Machine-readable metadata should be provided in a standardized format, while the metadata entities should be well-documented regarding semantics and the relations between the entities and the actual data. This can be achieved by defining the metadata as an ontology or schema, e.g. as XML or JSON. Schemas help in indexing metadata for search engines, repositories, or other data registries, and also help improve interoperability—the I in FAIR. Most of the other FAIR guidelines also apply to metadata.
 
 
