--- a/docs/20_role/10_research_group_leader.mdx
+++ b/docs/20_role/10_research_group_leader.mdx
@@ -27,7 +27,7 @@ The time invested to set up the ELN and to organise the experiments thus pays of
 
 ## How to start
 
-The choice of ELN and of the repository for the data deposition depends on the chemical sub-domain. Please have a look at the [user profiles](/docs/guide) for domain-specific details.
+The choice of ELN and of the repository for the data deposition depends on the chemical sub-domain. Please have a look at the [user profiles](/docs/role_guide) for domain-specific details.
 Moreover, the [best practice examples](/docs/best_practice) can help visualise how efficient RDM works.
 
 Of all chemists, 60 % work synthetically. There are many advantages of using the ELN [Chemotion](https://eln.chemotion.net/home) as a whole working group.
