--- a/docs/20_role/30_student.mdx
+++ b/docs/20_role/30_student.mdx
@@ -15,7 +15,7 @@ While working in the lab for a bachelor or master thesis plenty of data will be 
 :::
 
 :::note Note:        
-If you want to learn more about domain-specific data production methods, you can also look at the [domain-specific profiles](/docs/guide).
+If you want to learn more about domain-specific data production methods, you can also look at the [domain-specific profiles](/docs/domain_guide).
 :::
 
 ## Data documentation
