adjusted numbering and set links for sidebar

--- a/docs/10_domains/00_domain_guide.mdx
+++ b/docs/10_domains/00_domain_guide.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Domain Guide"
 slug: "/domain_guide"
+id: "domains_guide"
 ---
 
 import N4CFeatures from '/src/components/N4CFeatures.js';
