--- a/docs/20_role/00_role_guide.mdx
+++ b/docs/20_role/00_role_guide.mdx
@@ -1,6 +1,7 @@
 ---
-title: "Guide"
+title: "Guide for Roles"
 slug: "/role_guide"
+id: "role_guide"
 ---
 
 import N4CFeatures from '/src/components/N4CFeatures.js';
