--- a/docs/30_data/00_data_guide.mdx
+++ b/docs/30_data/00_data_guide.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Guide for Handling Data"
 slug: "/data_guide"
+id : "data_guide"
+
 ---
 
 import IntroButton from '@site/src/components/IntroButton.js'
