re-wrote topics guide for new structure

--- a/docs/60_topics/00_topics_guide.mdx
+++ b/docs/60_topics/00_topics_guide.mdx
@@ -6,37 +6,24 @@ id: "topics_guide"
 
 
 :::info Info:
-The topics and concepts section offers topic-specific articles with references to further resources. Important concepts and tools are presented as well as other relevant aspects for digitising chemistry. Basics that are important for research data management for all roles and all domains are explained in detail.
+The topics and concepts section offers topic-specific articles on very specific subjects in research data management and digitalization in chemistry This section is sub-divided into further categories for easy reference. 
 :::
 
-The [data life cycle](/docs/data_life_cycle) is used to illustrate the handling of research data according to the [FAIR principles](/docs/fair). Important tools such as [electronic laboratory journals (ELNs)](/docs/eln) help to assign rich [metadata](/docs/metadata). If the ELN is directly connected to a [repository](/docs/repositories), data can be transferred into the repository easily for data publication. In order to ensure that data are permanently referenced and cited, repositories assign unique [persistent identifiers (PIDs)](/docs/pid). By linking the journal publication to the data publication, findability of the data files for re-use is guaranteed. This is one [best practice](/docs/best_practice) example that can guide you to better understand how efficient data handling works.
-[Data availability statements](/docs/data_availability_statement) are also important for publishing data, as they indicate where the data supporting the findings reported in a published article can be found.
+For data to be interoperable and reusable, [data formats standards](62_data_formats/00_format_standards.mdx) are of utmost importance. Development here is ongoing and we will continue to add information on formats.
 
-Finding relevant articles based on IUPAC names or trivial names of molecules is a challenging task. Having [machine-readable chemical structures](/docs/machine-readable_chemical_structures) such as [chemical table file formats](/docs/ct_files), [InChI](/docs/inchi) identifiers and [SMILES](/docs/smiles) structure codes as part of a dataset, associated with a research article, will enhance its findability.
+In order to ensure that data are permanently referenced and cited, repositories assign unique [persistent identifiers (PIDs)](/docs/pid). By linking the journal publication to the data publication, findability of the data files for re-use is guaranteed.
 
-[Data format standards](/docs/format_standards) are important for all research data.
-Knowing the core concepts of [ontologies](/docs/ontology) in one's research domain is helpful in a FAIR research data management context.
+Annotating data with machine-readable [metadata](63_data_description_annotation/10_metadata.mdx) plays into nearly all aspects of FAIR and ensures data are understood by machines and humans alike. Here, the core concepts of [ontologies](/docs/ontology) in one's research domain proves helpful.
 
 
 <details>
-  <summary>Click to expand for all topics and concepts!</summary>
+  <summary>Click to expand for all the Categories</summary>
   
  <h3>Topics & Concepts</h3>
  
-<a href="/docs/fair">FAIR Data Principles</a> <br />
-<a href="/docs/eln">Electronic Lab Notebooks (ELNs)</a> <br />
-<a href="/docs/repositories">Repositories</a> <br />
-<a href="/docs/metadata">Metadata and Minimum Information</a> <br />
-<a href="/docs/format_standards">Data format standard</a> <br />
-<a href="/docs/ontology">Ontology</a> <br />
-<a href="/docs/best_practice">Best Practice</a> <br />
-<a href="/docs/machine-readable_chemical_structures">Machine-Readable Chemical Structures</a> <br />
-<a href="/docs/ct_files">Chemical Table File Formatss</a> <br />
-<a href="/docs/inchi">InChI</a> <br />
-<a href="/docs/smiles">SMILES</a> <br />
-<a href="/docs/pid">Persistent Identifiers (PIDs)</a> <br />
-<a href="/docs/data_life_cycle">Research Data Life Cycle</a> <br />
-<a href="/docs/data_availability_statement">Data Availability Statement</a> <br />
+<a href="/docs/identifiers">Identifiers</a> <br />
+<a href="/docs/format_standards">Data Formats</a> <br />
+<a href="/docs/data_description_annotation">Data Description and Annotation</a> <br />
+
 
 </details>
-
