refactor: intro buttons

--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -61,25 +61,24 @@ The handling data section explains common problems and challenges regarding RDM.
 <IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Handling_Data.svg"} text={"Handling Data"} />
 
 
-### Topics & Concepts
+### Smartlab
 
-These pages contain general information on specific RDM topics and concepts explained in a chemical context. The articles do not just illustrate a subject, but relate it to important other topics and concepts. Check out the articles and learn more about the implementation of good RDM and FAIR science. Gain deeper insights into the following aspects:
+<strong><span style={{ color: "red" }}>New text needed.</span></strong>
+<ul style={{ color: "red" }}><li>New bullets needed</li>
+    <li>New bullets needed</li>
+    </ul>
 
-- general basics and principles
-- application and implementation
-- presentation of one or more suitable chemistry-specific examples
-- further information and reading 
-
-<IntroButton url={"/docs/guide"} imgUrl={"/img/nfdi4chem_Topics_and_Concepts.svg"} text={"Topics & Concepts"} />
+<IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_Smartlab.svg"} text={"Smartlab"} />
 
 
-### Lead by Example
+### Data Publication
 
-The section on Lead by Example presents representative as well as substantially complex real datasets from various subdisciplines of chemistry in a standard-compliant manner. Take a look at the list for inspiration as to what is already possible today!
+<strong><span style={{ color: "red" }}>New text needed.</span></strong>
+<ul style={{ color: "red" }}><li>New bullets needed</li>
+    <li>New bullets needed</li>
+    </ul>
 
-Additionally, this list documents the process of evolving FAIRness of chemistry research data, surfaces practical issues and gives suggestions for improvements to be fed back to other projects within NFDI4Chem.
-
-<IntroButton url={"/docs/lead-by-example"} imgUrl={"/img/nfdi4chem_Lead_by_Example.svg"} text={"Lead by Example"} />
+<IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
 
 
 :::info Info: 
