adaptation of intro page

--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -31,7 +31,7 @@ Research Data Management in chemistry is currently not systematically organised 
 ## Navigation through knowledge base
 
 :::info Guidance for getting started:
-The knowledge base offers different points of entry that help you in navigating the site and simplify the targeted search for information. Start learning more about RDM by selecting a domain or role, viewing the topics and concepts, or finding solutions for common problems.
+The knowledge base offers different points of entry that help you in navigating the site and simplify the targeted search for information. Start learning more about RDM by selecting a domain or role, viewing the handling data articles, or finding information about electronic lab notebooks as part of a smartlab. Information on the publication of data is also provided.
 :::
 
 
@@ -51,7 +51,7 @@ The role pages focus on the motivation for role-specific requirements and answer
 
 ### Handling data
 
-The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Data storage and archiving and data publication are also covered. Find a detailed description of the following aspects:
+The handling data section explains common problems and challenges regarding RDM. Problematic aspects of data handling are considered, starting with the creation of data management plans, data organisation and data documentation. Data storage and archiving are also covered. Find a detailed description of the following aspects:
 
 - general basics
 - formal responsibilities and organisational conventions
@@ -63,10 +63,12 @@ The handling data section explains common problems and challenges regarding RDM.
 
 ### Smartlab
 
-<strong><span style={{ color: "red" }}>New text needed.</span></strong>
-<ul style={{ color: "red" }}><li>New bullets needed</li>
-    <li>New bullets needed</li>
-    </ul>
+To enable fully digitised workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab:
+
+- Designed as a modular platform
+- Covers the entire data life cycle
+- Possibility of integrating devices and using external information sources 
+- Seamless data transfer to data repositories
 
 <IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_Smartlab.svg"} text={"Smartlab"} />
 
