--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -65,10 +65,10 @@ The handling data section explains common problems and challenges regarding RDM.
 
 To enable fully digitised workflows in chemistry, the development and provision of a modular virtual laboratory environment with concepts, services and software (smartlab) is essential. Electronic lab notebooks are an important part of the smartlab:
 
-- Designed as a modular platform
-- Covers the entire data life cycle
-- Possibility of integrating devices and using external information sources 
-- Seamless data transfer to data repositories
+- designed as a modular platform
+- covering the entire data life cycle
+- possibility of integrating devices and using external information sources 
+- seamless data transfer to data repositories
 
 <IntroButton url={"/docs/smartlab"} imgUrl={"/img/nfdi4chem_Smartlab.svg"} text={"Smartlab"} />
 
