--- a/docs/40_smartlab/00_smartlab.mdx
+++ b/docs/40_smartlab/00_smartlab.mdx
@@ -10,10 +10,11 @@ import useBaseUrl from '@docusaurus/useBaseUrl';
 
 # Smart Laboratory (Smart Lab)
 
+![smartlab_flow](/img/smartlab/smartlab_flow.png)
 
-The term smart laboratory does not refer to a laboratory where tablets can be found in every corner. The smart lab represents a holistic approach to [data management](/docs/data_guide) in chemistry with seamless data flows. What does this mean? It means that all steps within a researcher's workflow [link domains] across the research data lifecycle [link data lifecycle] are interconnected in a digital way. For example, a researcher plans and documents [link data documentation] his experiment in an electronic lab notebook (ELN) [link ELN]. Any experimental data from devices such as spectrometers are then directly ingested by the ELN via Application Programming Interfaces (APIs) [Link to wikipedia article]. 
+The term smart laboratory does not refer to a laboratory where tablets can be found in every corner. The smart lab represents a holistic approach to [data management](/docs/data_guide) in chemistry with seamless data flows. What does this mean? It means that all steps within a researcher's [workflow](/docs/domain_guide) across the [research data lifecycle](/docs/data_life_cycle) are interconnected in a digital way. For example, a researcher plans and [documents](/docs/data_documentation) their experiment in an [electronic lab notebook (ELN)](docs/eln). Any experimental data from devices such as spectrometers are then directly ingested by the ELN via [Application Programming Interfaces (APIs)](https://en.wikipedia.org/wiki/API). 
 
-The ELN then ideally assigns all the necessary metadata [link to metadata] automatically and appropriately for a corresponding workflow and converts proprietary data formats [link to data format standards] to open data formats. The ELN structures the (meta)data and experimental descriptions in a meaningful and sustainable way which is both human- and machine-readable (e.g., via the use of machine-readable chemical structures [Link to machine-readable chemical structures]). When the researcher chooses to publish [link to data publication] or archive [link to data storage] their data, it is then ingested seamlessly by a data repository [link to repository] or archive without much further work as the ELN has already appropriately prepared the dataset to meet a repository’s or archive’s requirements [link choose repository]. 
+The ELN then ideally assigns all the necessary [metadata](/docs/metadata) automatically and appropriately for a corresponding workflow and converts proprietary [data formats](/docs/format_standards) to open data formats. The ELN structures the (meta)data and experimental descriptions in a meaningful and sustainable way which is both human- and machine-readable (e.g., via the use of [machine-readable chemical structures](/docs/machine-readable_chemical_structures). When the researcher chooses to [publish](/docs/data_publication) or [archive](/docs/data_storage) their data, it is then ingested seamlessly by a data [repository](/docs/repositories) or archive without much further work as the ELN has already appropriately prepared the dataset to meet a repository’s or archive’s [requirements](/docs//choose_repository). 
 
 In this section, key components of the smart lab will be introduced to you.
 
