minor edits to data publication

--- a/docs/50_data_publication/00_data_publication.mdx
+++ b/docs/50_data_publication/00_data_publication.mdx
@@ -6,9 +6,12 @@ id: "data_publication"
 
 # Data Publication
 
+<!-- image ideas? -->
+
 In research, we strive to share results with others, commonly through articles in renowned scientific journals. To be able to actually work with and build upon these results, however, the scientific community also requires the data that the results were based on. Publishing and therefore sharing these research data in a [FAIR](/docs/fair) manner by including, for example, [machine-readable chemical structures](/docs/machine-readable_chemical_structures), [standard data formats](/docs/format_standards), and rich [metadata](/docs/metadata) adds value to the research results. 
 
-[Research data repositories](/docs/repositories) serve as a primary method to publish research data, while [smartlab](/docs/smartlab) solutions can offer built-in workflows to assist researchers in sharing their research data straight from the lab. <!-- or: straight from the ELN? --> Some data may warrant their own [data article](/docs/data_articles). How the data has been shared and can be accessed should be clearly communicated through a [Data Availability Statement](/docs/data_availability_statement), ideally linking to the dataset via its [persistent identifier](/docs/identifiers). <!-- leave out "ideally"?--> This statement is typically included in the backmatter of a published article. 
+[Research data repositories](/docs/repositories) serve as a primary method to publish research data, while [smart Lab](/docs/smartlab) solutions can offer built-in workflows to assist researchers in sharing their research data straight from the lab. <!-- or: straight from the ELN? --> Some data may warrant their own [data article](/docs/data_articles) to be published alongside the results. 
 
+[Data Availability Statement](/docs/data_availability_statement) communicate how the data has been shared and how it can be accessed by others, ideally linking to the dataset via its [persistent identifier](/docs/identifiers). <!-- leave out "ideally"?--> This statement is typically included in the back matter of a published article. 
 
-NFDI4Chem features datasets published by researchers and also assists them in publishing their data. To find our more, head to [Lead by Example](/docs/lbe-intro).
+NFDI4Chem features datasets published by researchers and also assists in publishing research data. To find our more, head to [Lead by Example](/docs/lbe-intro).
