--- a/docs/00_intro/00_intro.mdx
+++ b/docs/00_intro/00_intro.mdx
@@ -75,10 +75,12 @@ To enable fully digitised workflows in chemistry, the development and provision 
 
 ### Data Publication
 
-<strong><span style={{ color: "red" }}>New text needed.</span></strong>
-<ul style={{ color: "red" }}><li>New bullets needed</li>
-    <li>New bullets needed</li>
-    </ul>
+In the category data publication you will find all the important information on the topic of publishing data:
+
+- What is a repository and how do I choose a suitable one?
+- Best practices for research data management 
+- Learn about data availability statements
+- Why are machine-readable chemical structures meaningful?
 
 <IntroButton url={"/docs/data_publication"} imgUrl={"/img/nfdi4chem_Data_Publication.svg"} text={"Data Publication"} />
 
